k8s/email-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
