k8s/email-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: email-serveur.akrzen.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 3001
  tls:
    - hosts:
        - email-serveur.akrzen.cloud
      secretName: email-tls
